--- a/.azuredevops/pipelines/run-on-selfhosted-pool-sample-helm.yml
+++ b/.azuredevops/pipelines/run-on-selfhosted-pool-sample-helm.yml
@@ -43,6 +43,7 @@ stages:
     jobs:
       - job: RunParallelTests
         displayName: "Run parallel tests on selected pool"
+        timeoutInMinutes: 30
         pool:
           ${{ if and(eq(parameters.os, 'linux'), parameters.useAzureLocal) }}:
             name: KubernetesPoolOnPremLinux${{ parameters.instanceNumber }}
