--- a/.azuredevops/pipelines/deploy-aks-hci.yml
+++ b/.azuredevops/pipelines/deploy-aks-hci.yml
@@ -59,8 +59,6 @@ variables:
     value: ${{ parameters.DeleteCluster }}
 
 # Use a Windows agent so we can run Windows PowerShell 5.x
-pool:
-  name: "${{ parameters.windowsOnPremPoolName }}"
 
 stages:
   - stage: deploy
@@ -68,6 +66,7 @@ stages:
     jobs:
       - job: deploy
         displayName: Create AKS-HCI Workload Cluster
+        pool: ${{ parameters.windowsOnPremPoolName }}
         steps:
           - checkout: self
 
